Финальное задание, трекер задач, 5 спринт, версия 2